# eng-software-projeto

./: .env  .env_example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  fruit_test.py  pyproject.toml
.github/workflows/: main.yml
database/: database.sql
docs/: MCU.dia  classe_dominio.dia
eng_software_projeto/: main.py
eng_software_projeto-frontend/: avaliar_novas_competencias.php  cadastro_pessoa.php  cadastro_projeto.php  cadastro_subtarefa.php  cadastro_tarefa.php  competencias_analista.php  dados_pessoais.php  detalhes_projeto.php  detalhes_tarefa_subtarefa.php  esqueci_minha_senha.php  footer.php  header.php  lista_todos_analistas.php  login.php  logout.php  operacao_falhou.php  operacao_realizada_com_sucesso.php  pagina_inicial.php  perfil_analista.php  processa_login.php  sugerir_nova_competencia.php  tarefas_subtarefas_do_analista.php  usuario_senha_incorretos.php  verificar_login.php
eng_software_projeto-frontend/css/: styles.css
eng_software_projeto-frontend/js/: scripts.js
eng_software_projeto/controllers/: user_controller.py
eng_software_projeto/models/: database.py  project.py  user.py
eng_software_projeto/schemas/: project.py  user.py
eng_software_projeto/templates/: index.jinja2
nginx/: nginx.conf
