[tool.poetry]
name = "eng-software-projeto"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.4"
fastapi = "^0.108.0"
uvicorn = {extras = ["standard"], version = "^0.25.0"}
fastapi-htmx = "^0.4.1"
sqlalchemy = "^2.0.25"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
black = "^23.12.1"
pyright = "^1.1.345"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.poetry.scripts]
start = "eng_software_projeto.main:start"
